crates/guest-macros/tests/compile_fail/missing_owner.rs
struct Provider;

omnia_guest_macros::guest!({
    provider: Provider,
});

fn main() {}
